[package]
authors = ["Unknown Author <unknown@example.com>"]
edition = "2018"
name = "bevy_template"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.5.0"

# Compile all the *dependencies* in optimized release mode even if `--release` is not passed in
[profile.dev]
debug = false
opt-level = 3

# But compile the project itself in debug mode if `--release` is not passed in
[profile.dev.package.bevy_template]
debug = true
opt-level = 0
